# kikai-rs

./: .gitignore  Cargo.toml  basic.tal  unit.rom  unit.rom.sym
.github/workflows/: build.yml
assets/: spritesheet.json
src/: assets.rs  executable.rs  main.rs  radio.rs  sandbox.rs  unit_repo.rs  unit_spawn.rs  vm.rs
src/bundles/: mod.rs  unit.rs
src/components/: collider.rs  executable.rs  mod.rs  selectable.rs
src/devices/: command.rs  mod.rs  movement.rs  radio.rs
src/tools/: assembler.rs  mod.rs
uxntal/: a.rom  a.tal  print_string.tal
