[package]
name = "kikai-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bevy = "0.15.1"
bevy_egui = "0.33.0"
raven-uxn = { package = "raven-uxn", git = "https://github.com/MarceColl/raven" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
rusqlite-pool = "0.2.0"
rusqlite_migration = "1.3.1"
ruxnasm = "0.2.0"
zerocopy = "0.8.18"
zerocopy-derive = "0.8.18"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
